	- [kevin] $1936: also filter CXX in the configure argument filtering (fixes MinGW build again)
	- [kevin] $1938: cleaned up OLE self registration support, fixing Win32 link failure
	- [kevin] $1943: register the TLB file during OLE self registration
	                 don't abuse assert for error checking in registry.cpp
	
	Note: trunk forked into tiemu-debugging-branch at rev. $983 and has been merged back 
		into the trunk at rev. $1695.	
	For changes made in the tiemu-debugging-branch, see the RELEASE file starting at '20050806'.
	
	Note2: trunk forked into tiemu-3-libti2 branch at rev. $1920 and has been emrged back
		into the trunk at rev. $1768.

- 19/08/2005, version 2.00:
	- [kevin] $1662/1663: import V200 updates as HW2, not HW1 (and default TI-89/92+ updates to HW2)
	- [roms] $1666: use Titanium and V200 skins when available (else fallbacks)
	- [roms] $1667: fixed large column in the I/O port view
	- [roms] $1668: new function in the mem window (read address and dis-assemble at)
	- [roms] $1672: fixed 'Set PC to selection' command by adding a call to fill_prefetch_slow()
	- [roms] $1673: update ASCII column (dbg wnd) after cell editing
	- [roms] $1676: ask for 'Clear RAM' when reseting calc (O. Armand request)
	- [kevin] $1680/1681: fix buffer underflow in iodefs.c

- 03/08/2005, version 2.00-rc8:
	- [roms]  $1615: TiEmu retains the state of dbg windows (open/closed) now.
	- [kevin] $1623/1624: fixed: only first 32 bytes of ram_exec were restored from savestate
	- [kevin] $1625/1626: buffering grayscale planes to avoid blinking in double-buffered games
	- [roms]  $1627: put all gscales extern into gscales.h
	- [roms]  $1629: added new I/O ports window which let view/modify HW registers
	- [roms]  $1648: fixed buffer overflow in RTC HW3 and disabled full screen mode (too slow)

- 16/07/2005, version 2.00-rc7:
	- [roms] $1583: fixed PPhD's bug (no reload of ROM calls when upgrading)